--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Тестовое задание: https://github.com/avito-tech/autumn-2021-intern-assignment
+Изначальное тестовое задание: https://github.com/avito-tech/autumn-2021-intern-assignment
 
 Для запуска в контейнере: docker compose up --build
 
